@@ -8,6 +8,9 @@ New in version 6.1.4
   Calls to `tab-to-tab-stop' removed, as these would conflict.
   Use `C-q TAB' to insert a literally TAB-character.
 
+- auto-completion calling `py-shell-complete'
+  `py-auto-completion-mode-p' might be switched from menu
+
 - `py-shell' uses new `py-shell-mode', `py-shell-mode-map'
   M-x describe-mode RET mentions edit available commands
   Menu "Py-Shell"
